fix: special page pop overflow( mobile )

--- a/styles/Special.module.scss
+++ b/styles/Special.module.scss
@@ -16,6 +16,7 @@
     .pop {
       width: 100vw;
       height: 100vh;
+      overflow: hidden;
       position: absolute;
       z-index: 666666;
       top: 0;
@@ -42,9 +43,13 @@
         margin-bottom: 37px;
       }
       .popCover {
-        margin: 116px auto 0;
+        margin: 0px auto 0;
         width: -moz-fit-content;
         width: fit-content;
+        span {
+          transform: scale(0.9);
+          margin-top: -30px !important;
+        }
       }
     }
     .topic {
